feat(api-docs): add bearer token to security scheme
